Added new files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/favicon.ico" />
+
     <title>Jeferson Borras | Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -65,8 +65,8 @@
         font-size: 20px;
         border: none;
         outline: none;
-        background: #00adb5 !important;
-        color: white;
+        background: white !important;
+        color: #00adb5;
         cursor: pointer;
         padding: 10px;
         width: 50px;
@@ -383,7 +383,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-mobile">
       <div class="container">
-        <a class="navbar-brand" href="#"><span>JB</span>orras<span></span></a>
+        <a class="navbar-brand" href="#"><span>p</span>ortfolio<span></span></a>
         <button
           onclick="mobileMenuToggleNav()"
           class="navbar-toggler"
@@ -617,17 +617,19 @@
                 <i class="fa-brands fa-php" style="color: #aeb2d5"></i>
                 <p>PHP</p>
               </div>
+
               <div data-aos="fade-down" data-aos-duration="1000">
-                <i class="fa-brands fa-bootstrap" style="color: #59287a"></i>
-                <p>Bootstrap</p>
+                <i class="fa-brands fa-react" style="color: #61dbfb"></i>
+                <p>React Js</p>
               </div>
+
               <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-sass" style="color: #cc6699"></i>
                 <p>Sass</p>
               </div>
               <div data-aos="fade-down" data-aos-duration="1000">
-                <i class="fa-brands fa-react" style="color: #61dbfb"></i>
-                <p>React Js</p>
+                <i class="fa-brands fa-bootstrap" style="color: #59287a"></i>
+                <p>Bootstrap</p>
               </div>
               <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-laravel" style="color: #f05340"></i>
