Added new files

--- a/index.html
+++ b/index.html
@@ -398,19 +398,19 @@
     <div class="sidebar" id="sidebar">
       <div class="container mt-5">
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#home"
-          >Home</a
+          ><i class="fa-solid fa-house mr-2"></i>Home</a
         >
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#about"
-          >About</a
+          ><i class="fa-solid fa-address-card mr-2"></i>About</a
         >
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#works"
-          >Services</a
+          ><i class="fa-solid fa-desktop mr-2"></i>Services</a
         >
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#projects"
-          >Projects</a
+          ><i class="fa-solid fa-diagram-project mr-2"></i>Projects</a
         >
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#contact"
-          >Contact</a
+          ><i class="fa-solid fa-address-book mr-2"></i>Contact</a
         >
         <a
           class="btn-block resume"
@@ -648,7 +648,7 @@
       </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about area" id="about">
       <div class="container-fluid">
         <div class="container">
           <div class="row align-items-center align-content-center">
