Added new files

--- a/index.html
+++ b/index.html
@@ -515,21 +515,31 @@
               data-aos="flip-right"
               data-aos-duration="1000"
             >
-              <img src="assets/2x2.png" alt="" />
-            </div>
-
-            <div class="col-md-7">
-              <h1 data-aos="fade-right" data-aos-duration="1000">
-                Hello, It's Me 👋
-              </h1>
               <h1
+                class="my_name_mobile"
                 data-aos="fade-right"
                 data-aos-duration="2000"
                 class="display-5"
               >
                 Jeferson Borras
               </h1>
-              <h1 data-aos="fade-right" data-aos-duration="1000">
+
+              <img src="assets/2x2.png" alt="" />
+            </div>
+
+            <div class="col-md-7">
+              <h1 class="its_me" data-aos="fade-right" data-aos-duration="1000">
+                Hello, It's Me 👋
+              </h1>
+              <h1
+                class="my_name_desktop"
+                data-aos="fade-right"
+                data-aos-duration="2000"
+                class="display-5"
+              >
+                Jeferson Borras
+              </h1>
+              <h1 class="Typing" data-aos="fade-right" data-aos-duration="1000">
                 I am <span class="auto-type"></span>
               </h1>
               <p data-aos="fade-up" data-aos-duration="2000">
@@ -570,7 +580,7 @@
                 data-aos="fade-up"
                 data-aos-duration="1000"
                 class="github btn"
-                href="https://github.com/jborras910"
+                href="#"
                 target="_blank"
                 ><i class="fa-brands fa-github"></i
               ></a>
