--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@
               data-aos="flip-right"
               data-aos-duration="1000"
             >
+              <img src="assets/2x2.png" alt="" />
               <h1
                 class="my_name_mobile"
                 data-aos="fade-right"
@@ -523,8 +524,6 @@
               >
                 Jeferson Borras
               </h1>
-
-              <img src="assets/2x2.png" alt="" />
             </div>
 
             <div class="col-md-7">
@@ -783,9 +782,13 @@
     </section>
 
     <section class="projects" id="projects">
-      <div class="container-fluid text-center">
+      <div class="container-fluid">
         <div class="container">
-          <h1 data-aos-duration="1000" data-aos="zoom-in-down">
+          <h1
+            class="text-center"
+            data-aos-duration="1000"
+            data-aos="zoom-in-down"
+          >
             Latest <span>Projects</span>
           </h1>
 
@@ -793,13 +796,15 @@
             <div class="col-md-6" data-aos="flip-left" data-aos-duration="3000">
               <div class="box">
                 <img src="assets/queueing system.png" alt="" />
-                <div class="box-body p-3">
-                  <h6>
+                <div class="box-body">
+                  <h6 class="box-body-h6">
                     Web Application Queueing System for Technological Institute
                     of the Philippines College of Computer Studies
                   </h6>
+                  <a class="btn btn-secondary" href=""
+                    >View Here<i class="fa-solid fa-angles-right ml-2"></i
+                  ></a>
                 </div>
-                <a class="btn btn-secondary" href="">View Here</a>
               </div>
             </div>
 
@@ -810,18 +815,18 @@
             >
               <div class="box">
                 <img src="assets/PST project.png" alt="" />
-                <div class="box-body p-3">
-                  <h6>
+                <div class="box-body">
+                  <h6 class="box-body-h6">
                     Web-based Student E-Scholar Tracking and Management System
                     for Pasig City Scholarship Office
                   </h6>
+                  <a
+                    class="btn btn-secondary"
+                    target="_blank"
+                    href="https://pcs-escholar.com/"
+                    >View Here<i class="fa-solid fa-angles-right ml-2"></i
+                  ></a>
                 </div>
-                <a
-                  class="btn btn-secondary"
-                  target="_blank"
-                  href="https://pcs-escholar.com/"
-                  >View Here</a
-                >
               </div>
             </div>
           </div>
