Added new files

--- a/index.html
+++ b/index.html
@@ -801,6 +801,14 @@
                     Web Application Queueing System for Technological Institute
                     of the Philippines College of Computer Studies
                   </h6>
+                  <hr />
+                  <p>
+                    The Web Application Queueing System for the Technological
+                    Institute of the Philippines (TIP) College of Computer
+                    Studies is a cutting-edge solution designed to optimize the
+                    queuing processes within the college's administrative and
+                    student service areas.
+                  </p>
                   <a class="btn btn-secondary" href=""
                     >View Here<i class="fa-solid fa-angles-right ml-2"></i
                   ></a>
@@ -820,6 +828,13 @@
                     Web-based Student E-Scholar Tracking and Management System
                     for Pasig City Scholarship Office
                   </h6>
+                  <hr />
+                  <p>
+                    The Web-based Student E-Scholar Tracking and Management
+                    System is an innovative project developed for the Pasig City
+                    Scholarship Office to streamline and enhance the management
+                    of scholarship programs for students.
+                  </p>
                   <a
                     class="btn btn-secondary"
                     target="_blank"
