--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@
         </div>
       </div>
     </nav>
-    <div class="color-black"></div>
-    <div class="color-white"></div>
+
     <section class="home" id="home">
       <div class="container-fluid">
         <div class="container">
@@ -658,6 +657,23 @@
     </section>
 
     <section class="about area" id="about">
+      <img
+        class="bg-topright"
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="3500"
+        src="assets/bg-upper-right.png"
+        alt=""
+      />
+      <img
+        class="bg-topright"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="3500"
+        src="assets/bg-upper-right.png"
+        alt=""
+      />
+
       <div class="container-fluid">
         <div class="container">
           <div class="row align-items-center align-content-center">
@@ -865,7 +881,7 @@
               projects and ideas.
             </p>
           </div>
-          <script src="https://smtpjs.com/v3/smtp.js"></script>
+
           <form
             id="myForm"
             class="text-left form"
