Added new files

--- a/index.html
+++ b/index.html
@@ -397,7 +397,10 @@
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
       <div class="container mt-5">
-        <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#home"
+        <a
+          class="sidebar-link active"
+          onclick="mobileMenuToggleNav()"
+          href="#home"
           ><i class="fa-solid fa-house mr-2"></i>Home</a
         >
         <a class="sidebar-link" onclick="mobileMenuToggleNav()" href="#about"
@@ -471,7 +474,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto navbar-nav-1">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link active" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -817,10 +820,19 @@
               data-aos-duration="1000"
             >
               <h5>Febuary 2023</h5>
-              <h4>
+              <h6>
                 Web Application Queueing System for Technological Institute of
                 the Philippines College of Computer Studies
-              </h4>
+              </h6>
+
+              <p>
+                The Web Application Queueing System for the Technological
+                Institute of the Philippines (TIP) College of Computer Studies
+                is a cutting-edge solution designed to optimize the queuing
+                processes within the college's administrative and student
+                service areas.
+              </p>
+              <hr />
             </div>
             <div
               class="timeline-content"
@@ -838,10 +850,18 @@
               data-aos-duration="1000"
             >
               <h5>June 2022</h5>
-              <h4>
+              <h6>
                 Web-based Student E-Scholar Tracking and Management System for
                 Pasig City Scholarship Office
-              </h4>
+              </h6>
+
+              <p>
+                The Web-based Student E-Scholar Tracking and Management System
+                is an innovative project developed for the Pasig City
+                Scholarship Office to streamline and enhance the management of
+                scholarship programs for students.
+              </p>
+              <hr />
             </div>
             <div
               class="timeline-content"
