Added new files

--- a/index.html
+++ b/index.html
@@ -381,6 +381,19 @@
       </div>
     </div>
 
+    <div class="visitor-counter">
+      <script
+        type="text/javascript"
+        src="https://freehitcounters.org/count/czku"
+      ></script>
+      <br />
+      <a href="https://www.free-counters.org/">powered by Free-Counters</a>
+      <script
+        type="text/javascript"
+        src="https://whomania.com/ctr?id=8b97d8c5cec756e33fa41c370252aafe5104298e"
+      ></script>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-mobile">
       <div class="container">
         <a class="navbar-brand" href="#"><span>p</span>ortfolio<span></span></a>
