Added new files

--- a/index.html
+++ b/index.html
@@ -387,7 +387,12 @@
         src="https://freehitcounters.org/count/czku"
       ></script>
       <br />
-      <a href="https://www.free-counters.org/">powered by Free-Counters</a>
+      <a
+        class="Free-Counters"
+        href="https://www.free-counters.org/"
+        target="_blank"
+        ><p style="display: none">none</p></a
+      >
       <script
         type="text/javascript"
         src="https://whomania.com/ctr?id=8b97d8c5cec756e33fa41c370252aafe5104298e"
