Added new files

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         class="Free-Counters"
         href="https://www.free-counters.org/"
         target="_blank"
-        ><p style="display: none">none</p></a
+        ><p>None</p></a
       >
       <script
         type="text/javascript"
