Added new files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/timeline.css" />
+
+    <!--Google font-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anuphan&family=Nunito:wght@800&family=Roboto:ital,wght@1,300&family=Sedgwick+Ave+Display&display=swap"
+      rel="stylesheet"
+    />
+
     <!--font awesome icon-->
     <script
       src="https://kit.fontawesome.com/6cea1e7bdb.js"
@@ -509,7 +519,7 @@
 
     <section class="home" id="home">
       <div class="container-fluid">
-        <div class="visitor-counter">
+        <!-- <div class="visitor-counter">
           <script
             type="text/javascript"
             src="https://freehitcounters.org/count/czku"
@@ -525,7 +535,8 @@
             type="text/javascript"
             src="https://whomania.com/ctr?id=8b97d8c5cec756e33fa41c370252aafe5104298e"
           ></script>
-        </div>
+        </div> -->
+
         <div class="container">
           <div
             class="row flex-row-reverse align-items-center align-content-center"
