Added new files

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         background-attachment: fixed;
         background-position: center;
       }
+
       #progress-container {
         position: fixed;
         top: 0;
@@ -56,6 +57,8 @@
       }
 
       #progress-bar {
+        transition-timing-function: ease-in !important;
+        transition: all 0.5s !important;
         height: 100%;
         width: 0;
         background-color: #00adb5; /* Color of the progress bar */
@@ -170,27 +173,6 @@
               functional websites. Jeferson's ability to combine design
               principles with coding skills enables him to craft engaging
               digital experiences for users.
-            </p>
-            <hr />
-            <p>
-              Furthermore, Jeferson has a knack for digital marketing. He
-              understands the importance of effectively promoting products and
-              services in the online realm. Through his knowledge of SEO (Search
-              Engine Optimization), content creation, and social media
-              marketing, he strives to enhance brand visibility and drive
-              organic traffic to websites.
-            </p>
-
-            <hr />
-            <p>
-              Jeferson's entrepreneurial aspirations are driven by his passion
-              for cryptocurrencies. As a cryptocurrency investor, he recognizes
-              the transformative potential of digital currencies and blockchain
-              technology. With a forward-thinking mindset, Jeferson aims to
-              leverage his expertise in the crypto space to build his own
-              business in the future. His goal is to contribute to the growing
-              landscape of blockchain technology, while also creating innovative
-              solutions to address the challenges faced by the industry.
             </p>
             <hr />
             <p>
@@ -997,7 +979,7 @@
 
           <form id="myForm" class="text-left form">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="form-group">
                   <input
                     type="text"
@@ -1006,7 +988,7 @@
                   />
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="form-group">
                   <input
                     name="last_name"
@@ -1015,7 +997,7 @@
                   />
                 </div>
               </div>
-              <div class="col-md-4">
+              <!-- <div class="col-md-4">
                 <div class="form-group">
                   <input
                     type="text"
@@ -1023,7 +1005,7 @@
                     placeholder="&#xf007;  Middle Name..."
                   />
                 </div>
-              </div>
+              </div> -->
               <div class="col-md-12">
                 <div class="form-group">
                   <input
