Added new files

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
             <div class="col-md-7">
               <h1 class="its_me" data-aos="fade-right" data-aos-duration="1000">
-                Hi There 👋,
+                Hi There,
               </h1>
               <h1
                 class="my_name_desktop"
