added new files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- <link rel="icon" href="assets/anime.png" /> -->
     <title>Jeferson Borras | Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -519,7 +519,7 @@
 
     <section class="home" id="home">
       <div class="container-fluid">
-        <div class="visitor-counter">
+        <!-- <div class="visitor-counter">
           <script
             type="text/javascript"
             src="https://freehitcounters.org/count/czku"
@@ -535,7 +535,7 @@
             type="text/javascript"
             src="https://whomania.com/ctr?id=8b97d8c5cec756e33fa41c370252aafe5104298e"
           ></script>
-        </div>
+        </div> -->
 
         <div class="container">
           <div
