Added new files

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               data-aos="flip-right"
               data-aos-duration="1000"
             >
-              <img src="assets/2x2.png" alt="" />
+              <img src="assets/anime.png" alt="" />
               <h1
                 class="my_name_mobile"
                 data-aos="fade-right"
@@ -714,7 +714,7 @@
               data-aos="fade-right"
               data-aos-duration="1000"
             >
-              <img src="assets/toga.jpg" alt="" />
+              <img src="assets/toga_2.jpg" alt="" />
             </div>
 
             <div
