--- a/index.html
+++ b/index.html
@@ -126,10 +126,25 @@
   </head>
 
   <body>
+    <script>
+      swal({
+        title: "Oops...",
+        content: {
+          element: "div",
+          attributes: {
+            innerHTML:
+              "Unfortunately, this is not functioning at the moment. For assistance, please feel free to reach out to me on <a target='_blank' href='https://www.linkedin.com/in/jeferson-borras-818a661b0/'>https://www.linkedin.com/jeferson-borras</a>",
+          },
+        },
+        icon: "error",
+        button: "Close",
+        dangerMode: true, // Allows HTML in the text
+      });
+    </script>
+
     <div id="progress-container">
       <div id="progress-bar"></div>
     </div>
-    <div id="particles-js"></div>
 
     <button
       class="rounded-circle"
@@ -519,6 +534,7 @@
 
     <section class="home" id="home">
       <div class="container-fluid">
+        <div id="particles-js"></div>
         <!-- <div class="visitor-counter">
           <script
             type="text/javascript"
@@ -546,7 +562,12 @@
               data-aos="flip-right"
               data-aos-duration="1000"
             >
-              <img src="assets/anime.png" alt="" />
+              <img class="mobile-pic" src="assets/anime.png" alt="" />
+              <div class="box">
+                <div class="content">
+                  <img class="anime-pic" src="assets/anime.png" alt="" />
+                </div>
+              </div>
               <h1
                 class="my_name_mobile"
                 data-aos="fade-right"
